@@ -5,7 +5,7 @@ default:
     node: 'cleanWater'
 
 each_group:
-  src: "<r:nodes do='group' by='kpath'><p do='each_group'><r:kpath/>: <r:each join=', ' do='title'/></p></r:nodes>"
+  src: "<r:nodes do='group' by='kpath'><p do='each_group'><r:first do='kpath'/>: <r:each join=', ' do='title'/></p></r:nodes>"
   res: "<p>NP: crocodiles, status title</p><p>NDI: it&#39;s a lake</p><p>NRC: The lake we love</p><p>NNP: parc opening</p><p>ND: water</p>"
 
 # set_var tested in eval.yml
